@@ -1,4 +1,5 @@
 0.07
+ - Add author tests.
  - Fix doc.
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Improve tests for create() method.
